--- a/css/index.css
+++ b/css/index.css
@@ -25,3 +25,41 @@ body{
 	width:120px;
 	height: 70px;
 }
+
+#Top_header .header_search_bar{
+	padding-top: 10px ;
+	float: left;
+	width: 382px;
+	height:55px;
+}
+#Top_header .header_search_box{
+	margin: 0px;
+	padding-top: 8px;
+	width:380px;
+	height:40px;
+	position: relative;
+	border:1px solid #E5E9DF;
+	font-size:21px;
+}
+#Top_header .header_search_box input[type="text"]{
+	padding-left: 5px;
+	outline: none;
+	width: 345px;
+	height: 28px;
+	color: #333;
+	position: relative;
+	border: none;
+	font-family: "微软雅黑";
+	background-color: #FFFFFF;
+}
+#Top_header .header_search_box input[type="submit"]{
+	background: url('../img/search.png') no-repeat 0px 2px;
+	border: none;
+	width: 32px;
+	height: 32px;
+	padding: 0px;
+	position: absolute;
+	outline: none;
+	top: 12px;
+	right: 0px;
+}
