--- a/css/index.css
+++ b/css/index.css
@@ -219,7 +219,7 @@ body{
 }
 #main_picture img{
 	width: 1300px;
-	text-align: center;
+	text-align:center;
 }
 
 #main{
@@ -254,9 +254,15 @@ body{
 }
 
 #main_top_pic{
-	text-align: center;
+	text-align:center;
 	width: 1300px;
 	height: 300px;
+}
+
+#main_top_pic a{
+	margin: 0 auto;
+	display: block;
+	width: 1000px;
 }
 
 #main_hot {
@@ -264,4 +270,58 @@ body{
 	width: 1300px;
 }
 
+#main_hot_header{
+	margin-bottom:10px;
+	padding-top: 15px;
+	width: 1300px;
+	height:40px;
+	background-color: #FFFFFF;
+}
+
+#main_hot_header h3{
+	margin: 0 auto;
+	margin-left: 160px;
+	width: 100px;
+	font-family: "微软雅黑";
+	color: #000000;
+	display: block;
+}
+
+.hot_pic_aera{
+	margin: 0 auto;
+	padding-left: 5px;
+	padding-right: 5px;
+	border-bottom: solid 1px #7A7A7A;
+	width: 990px;
+	height: 370px;
+}
+
+.hot_goods{
+	float: left;
+}
+
+.hot_goods_pic{
+	padding-bottom: 10px;
+	width: 320px;
+	height: 200px;
+}
+
+.hot_avatar {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+}
+
+.hot_goods_text{
+	padding: 20px;
+	width:280px;
+	height: 85px;
+}
+
+.hot_goods_text p{
+	font-family:"微软雅黑";
+	font-size: 16px;
+}
 
