--- a/css/index.css
+++ b/css/index.css
@@ -1,309 +1,415 @@
-/* css document */
-body{
-	background-color:#FFFFFF;
-	min-width: 1100px;
-	max-width: 1500px;
-	margin: 0 auto;
-	padding: 0 auto;
+/* CSS Document */
+body {
+    background-color: #FFFFFF;
+    min-width: 1100px;
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 0 auto;
 }
 
-#page{
-	margin: 0 auto;
-	width: auto;
+#page {
+    margin: 0 auto;
+    width: auto;
 }
 
-#Top_header{
-	margin: 0 auto;
-	width: auto;
-	height: 70px;
-	background-color:#FFFFFF;
+#Top_header {
+    margin: 0 auto;
+    width: auto;
+    height: 70px;
+    background-color: #FFFFFF;
 }
 
-#Top_header .logo{
-	float: left;
-	padding: 0px 15px 0px 110px;
-	width:120px;
-	height: 70px;
+#Top_header .logo {
+    float: left;
+    padding: 0px 15px 0px 110px;
+    width: 120px;
+    height: 70px;
 }
 
-#Top_header .header_search_bar{
-	padding-top: 10px ;
-	float: left;
-	width: 382px;
-	height:55px;
+#Top_header .header_search_bar {
+    padding-top: 10px;
+    float: left;
+    width: 382px;
+    height: 55px;
 }
-#Top_header .header_search_box{
-	margin: 0px;
-	padding-top: 8px;
-	width:380px;
-	height:40px;
-	position: relative;
-	border:1px solid #E5E9DF;
-	font-size:21px;
+
+#Top_header .header_search_box {
+    margin: 0px;
+    padding-top: 8px;
+    width: 380px;
+    height: 40px;
+    position: relative;
+    border: 1px solid #E5E9DF;
+    font-size: 21px;
 }
-#Top_header .header_search_box input[type="text"]{
-	padding-left: 5px;
-	outline: none;
-	width: 345px;
-	height: 28px;
-	color: #333;
-	position: relative;
-	border: none;
-	font-family: "微软雅黑";
-	background-color: #FFFFFF;
+
+#Top_header .header_search_box input[type="text"] {
+    padding-left: 5px;
+    outline: none;
+    width: 345px;
+    height: 28px;
+    color: #333;
+    position: relative;
+    border: none;
+    font-family: 微软雅黑;
+    background-color: #FFFFFF;
 }
-#Top_header .header_search_box input[type="submit"]{
-	background: url('../img/search.png') no-repeat 0px 2px;
-	border: none;
-	width: 32px;
-	height: 32px;
-	padding: 0px;
-	position: absolute;
-	outline: none;
-	top: 12px;
-	right: 0px;
+
+#Top_header .header_search_box input[type="submit"] {
+    background: url(../images/search.png) no-repeat 0px 2px;
+    border: none;
+    width: 32px;
+    height: 32px;
+    padding: 0px;
+    position: absolute;
+    outline: none;
+    top: 12px;
+    right: 0px;
 }
 
 #account_bar {
-	float: right;
-	margin: 0 auto;
-	margin-top:5px;
-	width:400px;
-	height:60px;
+    float: right;
+    margin: 0 auto;
+    margin-top: 5px;
+    width: 400px;
+    height: 60px;
 }
 
 #account_bar ul {
-	margin: 0px;
-	padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 #account_bar ul li {
-	float: left;
-	width: 100px;
-	height: 60px;
-	text-align: center;
-	display: block;
+    float: left;
+    width: 100px;
+    height: 60px;
+    text-align: center;
+    display: block;
 }
 
 #account_bar ul li a {
-	margin: 0 auto;
-	padding-top: 20px;
-	color: #151515;
-	font-family: "微软雅黑";
-	text-decoration: none;
-	text-align: center;
-	display: block;
+    margin: 0 auto;
+    padding-top: 20px;
+    color: #151515;
+    font-family: 微软雅黑;
+    text-decoration: none;
+    text-align: center;
+    display: block;
 }
 
-#account_bar ul li a:hover
-{
-	text-decoration: underline;
+#account_bar ul li a:hover {
+    text-decoration: underline;
 }
 
-#account_bar ul li a:visited{
-	color: #151515;
-	text-decoration: none;
-	
+#account_bar ul li a:visited {
+    color: #151515;
+    text-decoration: none;
 }
 
-#nav1{
-	margin: 0 auto;
-	width: auto;
+#nav1 {
+    margin: 0 auto;
+    width: auto;
 }
 
-#nav2{
-	margin:0 auto;
-	width:auto;
-	height:150px;
-	background-color: #F3F3F3;
+#nav2 {
+    margin: 0 auto;
+    width: auto;
+    height: 150px;
+    background-color: #F3F3F3;
 }
 
 #small_header {
-	margin: 0 auto;
-	width: auto;
-	height: 150px;
-	background-color: #F3F3F3;
+    margin: 0 auto;
+    width: auto;
+    height: 150px;
+    background-color: #F3F3F3;
 }
 
-#small_header ul{
-	margin: 0 auto;
-	padding:  0px;
-	padding-top: 20px;
-	width: 600px;
-	height: 110px;
+#small_header ul {
+    margin: 0 auto;
+    padding: 0px;
+    padding-top: 20px;
+    width: 600px;
+    height: 110px;
 }
 
 #small_header ul li {
-	float: left;
-	list-style: none;
-	margin: 0 auto;
-	margin-left: 20px;
-	margin-right: 20px;
-	width: 80px;
-	font-family: "微软雅黑";
-	display: block;	
+    float: left;
+    list-style: none;
+    margin: 0 auto;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 80px;
+    font-family: 微软雅黑;
+    display: block;
 }
 
 #small_header ul li a {
-	margin: 0 auto;
-	width: 70px;
-	display: block;
-	font-family: "微软雅黑";
-	font-size: 14px;
-	text-align: center;
-	text-decoration: none;
-	color: #151515;	
+    margin: 0 auto;
+    width: 70px;
+    display: block;
+    font-family: 微软雅黑;
+    font-size: 14px;
+    text-align: center;
+    text-decoration: none;
+    color: #151515;
 }
 
-#small_header ul li a:visited{
-	text-decoration:none;
-	font-family:"微软雅黑";
+#small_header ul li a:visited {
+    text-decoration: none;
+    font-family: 微软雅黑;
 }
 
-#small_header ul li a:hover{
-	color: #005CCB;
+#small_header ul li a:hover {
+    color: #005CCB;
 }
 
-#small_header ul li figure{
-	margin: 0 auto;
-	margin: 0px;
-	width:70px;
-	height: 70px;
-	display: block;
+#small_header ul li figure {
+    margin: 0 auto;
+    margin: 0px;
+    width: 70px;
+    height: 70px;
+    display: block;
 }
 
-#small_header ul li span{
-	margin: 0 auto;
-	width: 70px;
-	height: 30px;
-	text-align: center;
-	display: block;
+#small_header ul li span {
+    margin: 0 auto;
+    width: 70px;
+    height: 30px;
+    text-align: center;
+    display: block;
 }
 
 .icon-mobile {
-	background:url(../img/mobile-icon.png) no-repeat;
-	background-size: 70px 70px;
-	width: 70px;
-	height: 70px;
+    background: url(../images/mobile-icon.png) no-repeat;
+    background-size: 70px 70px;
+    width: 70px;
+    height: 70px;
 }
 
-.icon-pc{
-	background: url(../img/pc-icon.png) no-repeat;
-	background-size:70px 70px;
-	width: 70px;
-	height: 70px;
+.icon-pc {
+    background: url(../images/pc-icon.png) no-repeat;
+    background-size: 70px 70px;
+    width: 70px;
+    height: 70px;
 }
 
-.icon-headset{
-	background:url(../img/headset-icon.png) no-repeat;
-	background-size:70px 70px;
-	width: 70px;
-	height: 70px;
+.icon-headset {
+    background: url(../images/headset-icon.png) no-repeat;
+    background-size: 70px 70px;
+    width: 70px;
+    height: 70px;
 }
 
-.icon-adapter_data_cable{
-	background: url(../img/adapter_data_cable-icon.png) no-repeat;
-	background-size:70px 70px;
-	width:70px;
-	height: 70px;
+.icon-adapter_data_cable {
+    background: url(../images/adapter_data_cable-icon.png) no-repeat;
+    background-size: 70px 70px;
+    width: 70px;
+    height: 70px;
 }
 
 .icon-periphery {
-	background: url(../img/periphery-icon.png) no-repeat;
-	background-size:70px 70px;
-	width: 70px;
-	height: 70px;
-}
-#main_picture{
-	margin: 0 auto;
-}
-#main_picture img{
-	width: 1300px;
-	text-align:center;
+    background: url(../images/periphery-icon.png) no-repeat;
+    background-size: 70px 70px;
+    width: 70px;
+    height: 70px;
 }
 
-#main{
-	background-color: #FFFFFF;
-	margin: 0 auto;
-	padding-top: 100px;
-	width: 1300px;
+#main_picture {
+    margin: 0 auto;
+    /*    width: 0 auto;
+    height: 585px;*/
 }
 
-#main_top{
-	margin:0 auto;
-	padding-bottom: 100px;
-	width: auto;
-	height: 365px;
+#main_picture img {
+    width: 1300px;
+    text-align: center;
 }
 
-#main_top_header{
-	margin-bottom: 20px;
-	padding-top: 15px;
-	width: 1300px;
-	height: 50px;
-	background-color: #FFFFFF;
+#main {
+    background-color: #FFFFFF;
+    margin: 0 auto;
+    padding-top: 100px;
+    width: 1300px;
+
 }
 
-#main_top_header h3{
-	margin: 0 auto;
-	margin-left: 160px;
-	width: 100px;
-	font-family: "微软雅黑";
-	color: #000000;
-	display: block;
+
+#main_top {
+    margin: 0 auto;
+    padding-bottom: 100px;
+    width: auto;
+    height: 365px;
 }
 
-#main_top_pic{
-	text-align:center;
-	width: 1300px;
-	height: 300px;
+#main_top_header {
+    margin-bottom: 20px;
+    padding-top: 15px;
+    width: 1300px;
+    height: 50px;
+    background-color: #FFFFFF;
+}
+
+#main_top_header h3 {
+    margin: 0 auto;
+    margin-left: 160px;
+    width: 100px;
+    font-family: 微软雅黑;
+    color: #000000;
+    display: block;
+}
+
+#main_top_pic {
+    text-align: center;
+    width: 1300px;
+    height: 300px;
 }
 
 #main_top_pic a{
-	margin: 0 auto;
-	display: block;
-	width: 1000px;
+    margin: 0 auto;
+    display: block;
+    width: 1000px;
 }
 
 #main_hot {
-	margin: 0 auto;
-	width: 1300px;
+    margin: 0 auto;
+    width: 1300px;
 }
 
-#main_hot_header{
-	margin-bottom:10px;
-	padding-top: 15px;
-	width: 1300px;
-	height:40px;
-	background-color: #FFFFFF;
+#main_hot_header {
+    margin-bottom: 10px;
+    padding-top: 15px;
+    width: 1300px;
+    height: 40px;
+    background-color: #FFFFFF;
 }
 
-#main_hot_header h3{
-	margin: 0 auto;
-	margin-left: 160px;
-	width: 100px;
-	font-family: "微软雅黑";
-	color: #000000;
-	display: block;
+#main_hot_header {
+    margin-bottom: 10px;
+    padding-top: 15px;
+    width: 1300px;
+    height: 40px;
+    background-color: #FFFFFF;
 }
 
-.hot_pic_aera{
-	margin: 0 auto;
-	padding-left: 5px;
-	padding-right: 5px;
-	border-bottom: solid 1px #7A7A7A;
-	width: 990px;
-	height: 370px;
+#main_hot_header h3 {
+    margin: 0 auto;
+    margin-left: 160px;
+    width: 100px;
+    font-family: 微软雅黑;
+    color: #000000;
+    display: block;
 }
 
-.hot_goods{
-	float: left;
+.hot_pic_aera {
+    margin: 0 auto;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-bottom: solid 1px #7A7A7A;
+    width: 990px;
+    height: 370px;
 }
 
-.hot_goods_pic{
-	padding-bottom: 10px;
-	width: 320px;
-	height: 200px;
+.hot_goods {
+    float: left;
+    margin-top: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.hot_goods_pic {
+    padding-bottom: 10px;
+    width: 320px;
+    height: 200px;
+}
+
+.hot_goods_text {
+    padding: 20px;
+    width: 280px;
+    height: 85px;
+}
+
+.hot_goods_text p {
+    font-family: 微软雅黑;
+    font-size: 16px;
+}
+
+#footer {
+    padding-top: 20px;
+    padding-bottom: 10px;
+    width: auto;
+    height: 190px;
+    margin: 0 auto;
+}
+
+#footer_main {
+    margin-left: 50px;
+    width: 1200px;
+    height: 190px;
+    font-family: 微软雅黑;
+    text-align: center;
+}
+
+.footer_main_classify {
+    float: left;
+    width: 240px;
+}
+
+#footer_main ul {
+    margin: 0px;
+    padding: 0px;
+}
+
+#footer_main ul li {
+    margin: 0 auto;
+    margin-left: 0px;
+    padding-bottom: 10px;
+    list-style: none;
+    font-size: 14px;
+}
+
+#footer_main ul li a:hover {
+    color: #005CCB;
+}
+
+#footer_main h4 {
+    font-family: 微软雅黑;
+    font-size: 18px;
+}
+
+#footer_main a {
+    color: #000000;
+    text-decoration: none;
+}
+
+#footer_main a:hover {
+    text-decoration: underline;
+}
+
+
+.top_avatar {
+    position: relative;
+    display: block;
+    overflow: hidden;
+}
+
+.top_avatar img {
+    -webkit-transition: -webkit-transform 0.7s;
+    transition: transform 0.7s;
+}
+
+.top_avatar:hover,
+.top_avatar:hover,
+.top_avatar:hover {
+    box-shadow: 0 0 0px gray;
+}
+
+.top_avatar:hover img,
+.top_avatar:hover img,
+.top_avatar:hover img {
+    transform: scale3d(1.01, 1.01, 1);
+    -webkit-transition: scale3d(1.01, 1.01, 1);
 }
 
 .hot_avatar {
@@ -314,114 +420,17 @@ body{
     transition: transform 0.5s;
 }
 
-.hot_goods_text{
-	padding: 20px;
-	width:280px;
-	height: 85px;
-}
-
-.hot_goods_text p{
-	font-family:"微软雅黑";
-	font-size: 16px;
-}
-
-#footer{
-	padding-top: 20px;
-	padding-bottom: 10px;
-	width: auto;
-	height: 190px;
-	margin: 0 auto;
-}
-
-.footer_main_classify{
-	margin-left: 50px;
-	width: 1200px;
-	height: 190px;
-	font-family: "微软雅黑";
-	text-align: center;
-}
-
-#footer_main ul{
-	margin: 0px;
-	padding: 0px;
-}
-
-#footer_main ul li{
-	margin: 0 auto;
-	margin-left: 0px;
-	padding-bottom: 10px;
-	list-style: none;
-	font-size: 14px;
-}
-
-#footer_main ul li a:hover{
-	color: #005CCB;
-}
-
-#footer_main h4{
-	font-family: "微软雅黑";
-	font-size: 18px;
-}
-
-#footer_main a {
-	color: #000000;
-	text-decoration: none;
-}
-
-#footer_main a:hover{
-	text-decoration: underline;
-}
-
-.top_avatar{
-	position: relative;
-	display: block;
-	overflow: hidden;
-}
-
-.top_avatar img{
-	-webkit-transform: -webkit-transform 0.7s;
-	transition: transform 0.7s;
-}
-
-.top_avatar:hover,
-.top_avatar:hover,
-.top_avatar:hover{
-	box-shadow: 0 0 0px gray;
-}
-
-.top_avatar:hover img,
-.top_avatar:hover img,
-.top_avatar:hover img{
-	transform: scale3d(1.01,1.01,1);
-	-webkit-transition: scale3d(1.01,1.01,1);
-}
-
-.hot_avatar{
-	position: relative;
-	display: block;
-	overflow: hidden;
-	-webkit-transition: -webkit-transform 0.5s;
-	transition: transform 0.5s;
-}
-
 .hot_goods:hover,
 .hot_goods:hover,
-.hot_goods:hover{
-	height: 350px;
-	box-shadow: 0 0 7px #B1B1B1;
+.hot_goods:hover {
+    height: 350px;
+    box-shadow: 0 0 17px #B1B1B1;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*.hot_avatar:hover,
+.hot_avatar:hover,
+.hot_avatar:hover {
+    transform: scale3d(1.005, 1.005, 1);
+    -webkit-transition: scale3d(1.005, 1.005, 1);
+}
+*/
